--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+
+    <!-- index.html (en el <head> o justo antes del cierre del </body>) -->
+    <script
+      src="https://cdn.plot.ly/plotly-3.0.1.min.js"
+      charset="utf-8"
+    ></script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
